Fixed last message alignment

--- a/static/style.css
+++ b/static/style.css
@@ -73,6 +73,7 @@ html {
 .name {
     font-weight: bold;
     float: left;
+    width: calc(100% - 60px);
 }
 
 .time {
